Revert "Fix ease button alignment (#3404)"
This reverts commit a262e02f9de6017bbe4918c45bf228f5566d3802.

Due to regression:
https://forums.ankiweb.net/t/anki-24-10-beta/49989/119

--- a/qt/aqt/data/web/css/reviewer-bottom.scss
+++ b/qt/aqt/data/web/css/reviewer-bottom.scss
@@ -23,12 +23,6 @@ body {
     position: relative;
 }
 
-#middle {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
 button {
     min-width: 60px;
     white-space: nowrap;
@@ -81,7 +75,6 @@ button {
     border-top: 1px solid color(border);
     /* Better compatibility with graphics pad/touchscreen */
     -webkit-user-select: none;
-    position: relative;
 }
 
 .nightMode {
